--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,7 +14,7 @@
         />
 
     <item
-        android:id="@+id/placeholder"
+        android:id="@+id/calorieCounterPage"
         android:title=""
         />
 
