--- a/app/src/main/res/layout/fragment_social_feed_page.xml
+++ b/app/src/main/res/layout/fragment_social_feed_page.xml
@@ -1,14 +1,314 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".socialFeedPage">
+    tools:context=".socialFeedPage" >
 
-    <!-- TODO: Update blank fragment layout -->
+    <ImageButton
+        android:id="@+id/frenchtoast2"
+        android:layout_width="290dp"
+        android:layout_height="162dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="526dp"
+        android:background="@drawable/roundcorner"
+        android:clickable="true"
+        android:contentDescription="@string/hello_blank_fragment"
+        android:focusable="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/french_toast"
+        tools:ignore="DuplicateSpeakableTextCheck" />
+
+    <ImageButton
+        android:id="@+id/feedBlock2"
+        android:layout_width="355dp"
+        android:layout_height="129dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="87dp"
+        android:background="@drawable/transparent_background"
+        android:contentDescription="@string/hello_blank_fragment"
+        android:src="@drawable/roundcorner"
+        android:textAlignment="center" />
+
+    <ImageButton
+        android:id="@+id/feedBlock3"
+        android:layout_width="355dp"
+        android:layout_height="129dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="298dp"
+        android:background="@drawable/transparent_background"
+        android:contentDescription="@string/hello_blank_fragment"
+        android:src="@drawable/roundcorner"
+        android:textAlignment="center" />
+
     <TextView
+        android:id="@+id/quotes2"
+        android:layout_width="338dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="37dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="689dp"
+        android:fontFamily="@font/poppins_medium"
+        android:linksClickable="true"
+        android:text="time and health are two precious assets that we don't recognize and appreciate until they have been depleted - Denis Waitley"
+        android:textColor="#455A64"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/exercise"
+        android:layout_width="338dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="478dp"
+        android:fontFamily="@font/poppins_medium"
+        android:linksClickable="true"
+        android:text="Moderate aerobic exercise includes acticities such as briskwalk, biking, swimming, and mowing the lawn"
+        android:textColor="#455A64"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/quotesoftheday2"
+        android:layout_width="142dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="233dp"
+        android:layout_marginBottom="761dp"
+        android:fontFamily="@font/poppins_medium"
+        android:linksClickable="true"
+        android:text="quotes_of_the_day"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/exerciseoftheday4"
+        android:layout_width="338dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="551dp"
+        android:fontFamily="@font/poppins_medium"
+        android:linksClickable="true"
+        android:text="exercise_of_the_day"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/toastCaption"
+        android:layout_width="338dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="33dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="175dp"
+        android:fontFamily="@font/poppins_medium"
+        android:linksClickable="true"
+        android:text="try_out_our_new_recipe_now"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/likes1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="55dp"
+        android:layout_marginEnd="327dp"
+        android:layout_marginBottom="646dp"
+        android:fontFamily="@font/poppins_medium"
+        android:linksClickable="true"
+        android:text="100"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/likes2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="54dp"
+        android:layout_marginEnd="328dp"
+        android:layout_marginBottom="434dp"
+        android:fontFamily="@font/poppins_medium"
+        android:linksClickable="true"
+        android:text="97"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/likes3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="55dp"
+        android:layout_marginEnd="327dp"
+        android:layout_marginBottom="143dp"
+        android:fontFamily="@font/poppins_medium"
+        android:linksClickable="true"
+        android:text="250"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
+    <ImageButton
+        android:id="@+id/menu3Dot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="843dp"
+        android:background="@drawable/transparent_background"
+        android:contentDescription="@string/hello_blank_fragment"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
+        android:src="@drawable/ic_options" />
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="-2dp"
+        tools:context=".MainActivity">
 
-</FrameLayout>
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bottomAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:fabCradleMargin="10dp"
+            app:fabCradleRoundedCornerRadius="10dp"
+            app:fabCradleVerticalOffset="10dp">
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomNavigationView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/transparent_background"
+                app:menu="@menu/bottom_nav_menu"
+
+                />
+        </com.google.android.material.bottomappbar.BottomAppBar>
+
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/hello_blank_fragment"
+            android:src="@drawable/ic_baseline_white_plus_sign_24"
+
+            app:layout_anchor="@id/bottomAppBar"
+            tools:ignore="ImageContrastCheck" />
+
+        <TextView
+            android:id="@+id/feed2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="50dp"
+            android:fontFamily="@font/poppins"
+            android:text="feed"
+            android:textAllCaps="true"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <ImageButton
+        android:id="@+id/backButton"
+        android:layout_width="52dp"
+        android:layout_height="38dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/transparent_background"
+        android:contentDescription="@string/hello_blank_fragment"
+        android:src="@drawable/ic_baseline_black_arrow_back_24" />
+
+    <ImageView
+        android:id="@+id/star"
+        android:layout_width="18dp"
+        android:layout_height="21dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="220dp"
+        android:src="@drawable/star"
+        tools:ignore="ImageContrastCheck,ImageContrastCheck"
+        android:contentDescription="" />
+
+    <ImageView
+        android:id="@+id/star2"
+        android:layout_width="18dp"
+        android:layout_height="21dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="432dp"
+        android:src="@drawable/star"
+        tools:ignore="ImageContrastCheck"
+        android:contentDescription="" />
+
+    <ImageView
+        android:id="@+id/star3"
+        android:layout_width="18dp"
+        android:layout_height="21dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="723dp"
+        android:src="@drawable/star"
+        tools:ignore="ImageContrastCheck,ImageContrastCheck"
+        android:contentDescription="" />
+
+</RelativeLayout>
